objects/enway__Blink_Log__c.object
<CustomObject>
    <fields>
        <fullName>enway__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Blink Logs</relationshipLabel>
        <relationshipName>Blink_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enway__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Blink Logs</relationshipLabel>
        <relationshipName>Blink_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enway__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Blink Logs</relationshipLabel>
        <relationshipName>Blink_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enway__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enway__Multiconvert_Batch_Id__c</fullName>
        <label>Multiconvert Batch Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Blink Log</label>
    <listViews>
        <fullName>enway__All</fullName>
        <columns>NAME</columns>
        <columns>enway__Lead__c</columns>
        <columns>enway__Message__c</columns>
        <columns>enway__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Blink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blink Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>